--- a/view/.htaccess
+++ b/view/.htaccess
@@ -2,3 +2,5 @@ RewriteEngine on
 RewriteCond %{SCRIPT_FILENAME} !-f
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?url=$1
+
+DirectoryIndex home.php
